--- a/src/languages/my.json
+++ b/src/languages/my.json
@@ -249,7 +249,7 @@
   "enter_username_email": "Masukkan nama pengguna atau emel anda",
   "for_sale": "Untuk dijual",
   "register_partner": "Daftar rakan kongsi",
-  "become_shome_partner": "Menjadi rakan kongsi SHome",
+  "become_shome_partner": "Menjadi rakan kongsi Saveloka",
   "real_estate_type": "Jenis hartanah",
   "general_information": "Maklumat Am",
   "estate_detail": "Butiran Harta Tanah",
@@ -283,111 +283,111 @@
   "link_tiktok": "Pautan TikTok",
   "name": "Nama",
   "tour_by_topic": "Lawatan mengikut topik",
-"emigrate": "Beremigrasi",
-"world": "Dunia",
-"find_recommend_tour": "Cari Lawatan yang Dicadangkan",
-"package_tour_aboard": "Pakej lawatan luar negara",
-"discover_package_family": "Temui pakej lawatan keluarga 5D4D !!",
-"themed_tour": "Lawatan bertemakan",
-"discover_tour_youlove": "Temui jenis lawatan yang anda suka",
-"travel_around_world": "Melancong merata dunia",
-"discover_more_tour": "Temui lebih banyak lawatan",
-"the_place_discovery": "Tempat-tempat sangat berharga untuk ditemui",
-"dosmestic_destination": "Destinasi domestik",
-"international_destination": "Destinasi antarabangsa",
-"watch_the_most": "Tonton video paling hidup tentang tempat yang anda ingin lawati",
-"lastest_tour": "Tarikh lawatan terkini",
-"hour": "Jam",
-"ticket_option": "Pilihan tiket",
-"see_detail": "Lihat butiran",
-"easy_refund": "Pengembalian wang mudah",
-"easy_reschedule": "Penjadualan semula mudah",
-"select_ticket": "Pilih tiket",
-"trip_highlight": "Tumpuan perjalanan",
-"tour_schedule": "Jadual lawatan",
-"find_tour": "Cari lawatan",
-"best_price_from": "Harga terbaik dari",
-"room_information": "Maklumat Bilik",
-"little_convenient": "Kurang Selesa",
-"price_detail": "Perincian Harga",
-"room_rate": "Kadar Bilik",
-"taxes_and_fees": "Cukai dan Yuran",
-"total": "Jumlah",
-"request_to_book": "Permintaan untuk MENYEWA",
-"room_detail": "Perincian Bilik",
-"book": "BUKU",
-"contact_detail": "Butiran Hubungan",
-"choose_time": "Pilih Masa",
-"use_coupon": "Guna Kupon",
-"adult": "Dewasa",
-"children": "Kanak-kanak",
-"add_number_guest": "Tambah bilangan tetamu",
-"adult_year_old": "Dewasa (12-60 tahun)",
-"children_year_old": "Kanak-kanak (4-11 tahun)",
-"things_need_to_know": "Perkara yang perlu anda tahu",
-"inexperienced": "Tidak berpengalaman",
-"inseparable": "Tidak dapat dipisahkan",
-"no_reservation": "Tiada tempahan",
-"include_addition": "Termasuk caj tambahan",
-"price_include": "Harga termasuk",
-"carriage": "Kereta",
-"round_trip": "Perjalanan pulang-pergi",
-"high_speed": "Kereta api laju",
-"tour_guide": "Pemandu pelancong",
-"thai_english": "Pemandu pelancong yang bertutur dalam Bahasa Thai - Inggeris",
-"meal": "Makanan",
-"light_breakfast": "Sarapan ringan",
-"lunch_option": "Pilihan makan tengah hari (pilihan vegetarian disediakan)",
-"service_supple": "Perkhidmatan/Tambahan",
-"divine_mask": "Topeng penyelaman dan jaket keselamatan",
-"admission_fee": "Bayaran masuk",
-"insurance_provide": "Insurans disediakan oleh pengendali",
-"soft_drink": "Minuman ringan",
-"seasonal_fruits": "Buah-buahan musim",
-"cake_and_snack": "Harga kek dan snek tidak termasuk",
-"other_personal": "Perbelanjaan peribadi lain",
-"tip": "Tip",
-"voucher_validity": "Kesahan baucar",
-"use_selected_date": "Guna pada tarikh yang dipilih",
-"valid_normally": "Sah pada hari biasa",
-"valid_holiday": "Sah pada setiap cuti",
-"conversion_method": "Kaedah penukaran",
-"do_not_need_book": "Anda tidak perlu membuat tempahan sebelum tiba",
-"input_directly": "Input terus",
-"after_confirming": "Selepas mengesahkan tempahan, anda boleh melihat baucar perkhidmatan di laman tempahan saya atau melalui emel",
-"when_coming": "Apabila tiba, serahkan sahaja perkhidmatan di telefon kepada kakitangan di pintu masuk",
-"no_need_print_card": "Tidak perlu mencetak kad pembayaran",
-"just_present_electronic": "Cukup tunjukkan tiket/ kad pembayaran elektronik pada telefon apabila ditukar atau masuk pintu. Sila atur kecerahan skrin yang sesuai.",
-"how_to_change": "Bagaimana untuk menukar undian",
-"present_voucher": "Hadiahkan baucer di telefon anda atau cetak, bersama dengan pasport/KP untuk pertukaran hadiah bagi operator pelancongan.",
-"you_must": "Anda mesti bersedia untuk mengambil bahagian dalam lawatan dan tempat berkumpul telah dijadualkan. Jika anda tidak hadir pada masa dan tempat pertemuan, anda akan ditinggalkan dan tempahan anda akan dianggap tidak sah. Anda boleh meminta jadual berdasarkan kelulusan pengendali pelancongan dan ruang pada hari yang anda pilih.",
-"please_note": " Sila ambil perhatian bahawa hanya kad pembayaran Traveloka anda yang sah untuk masuk. Resit pembayaran atau bukti pembayaran tidak boleh digunakan untuk masuk.",
-"conversion": "Penukaran",
-"refund_and_change": "Pemulangan dan perubahan kalendar",
-"can_change_calendar": "Boleh menukar kalendar di halaman tempahan saya sebelum tarikh kedatangan yang dipilih.",
-"can_be_fully": "Boleh dipulangkan sepenuhnya",
-"it_is_only": "Hanya boleh meminta proses pemulangan sebelum tarikh pemilihan. Sila lihat dasar pemulangan di bawah untuk maklumat lanjut.",
-"calendar_change": "Dasar Perubahan Kalendar",
-"you_can_only": "Anda hanya boleh menukar jadual tempahan anda sehingga 2 kali.",
-"require_of_schedule": "Keperluan jadual boleh dilakukan sehingga 1 hari sebelum tarikh lawatan yang dipilih.",
-"your_rearrangement": "Jadual penataan semula anda akan digunakan untuk semua tetamu dalam 1 kod tempahan.",
-"you_can_schedule": "Anda boleh menjadualkan tempahan anda pada mana-mana hari yang tersedia dalam tempoh dari tarikh penerbitan baucer sehingga selepas 14 hari dari tarikh melihat asal anda. Sila ambil perhatian bahawa anda hanya boleh menukar kalendar ke hari yang lain daripada harga yang sama atau lebih rendah daripada tempahan asal anda.",
-"the_scheduling": "Tempahan jadual tidak akan dipulangkan.",
-"refund_policy": "Dasar pemulangan",
-"requirement_for_refund": "Keperluan untuk 2 hari terakhir sebelum pilihan anda untuk menerima pulangan 100%.",
-"your_reservation": "Tempahan anda tidak akan dipulangkan jika anda meminta pulangan kurang dari 2 hari sebelum tarikh yang dipilih.",
-"the_final_refund": "Pulangan terakhir tidak akan termasuk yuran perkhidmatan, kupon dan/atau yuran pindahan bank tunggal.",
-"to_cancel_reservation": "Untuk membatalkan tempahan anda dan meminta pulangan, sila lawati butiran tempahan saya. Di bahagian pengurusan tempahan, sentuh pulangan dan ikuti proses pulangan (tersedia pada aplikasi Traveloka versi 3.18 atau lebih tinggi atau laman web Traveloka di komputer).",
-"term_condition": "Terma & syarat",
-"there_is_surcharge": " Terdapat caj tambahan sebanyak THB 1000 untuk lawatan yang beroperasi semasa tempoh Tahun Baru dan tempoh Songkran. Sila bayar yuran tambahan secara langsung kepada operator pelancongan.",
-"all_travelers": "Semua pelancong mesti membawa pengenalan (atau pasport) bersama mereka setiap masa.",
-"child_ticket": "Tiket kanak-kanak terpakai untuk kanak-kanak dari 4 hingga 11 tahun atau 120cm atau kurang tinggi.",
-"adult_ticket": "Tiket dewasa terpakai untuk orang dari 12 hingga 60 tahun atau lebih dari 120cm tinggi.",
-"infants_under": "Bayi di bawah 1 tahun, warga tua lebih dari 60 tahun, dan haiwan peliharaan tidak dibenarkan dalam lawatan ini.",
-"guest_with_high": "Tetamu dengan tekanan darah tinggi, penyakit jantung, kandungan, asma, dan penyakit tulang atau ortopedik tidak dibenarkan untuk mengambil bahagian dalam lawatan ini.",
-"you_are_allergic": "Jika anda alah kepada makanan tertentu, sila beritahu operator sebelum perjalanan.",
-"this_activity": "Aktiviti ini tidak sesuai untuk kanak-kanak di bawah 2 tahun, wanita hamil, atau orang dengan keadaan perubatan atau kecacatan.",
-"foreigners_must": "Warganegara asing mesti memohon Visa E melalui  dan mengemukakan visa yang diluluskan kepada agensi 7 hari sebelum tarikh perjalanan.",
-"you_plan_to": "Jika anda merancang untuk melancong semasa perayaan besar, anda harus menempah tiket sekurang-kurangnya sebulan lebih awal.",
-"itineraries_time": "Jadual perjalanan di atas adalah anggaran dan mungkin dipinda tanpa notis untuk sesuaikan dengan pasang surut tempatan dan keadaan cuaca."
+  "emigrate": "Beremigrasi",
+  "world": "Dunia",
+  "find_recommend_tour": "Cari Lawatan yang Dicadangkan",
+  "package_tour_aboard": "Pakej lawatan luar negara",
+  "discover_package_family": "Temui pakej lawatan keluarga 5D4D !!",
+  "themed_tour": "Lawatan bertemakan",
+  "discover_tour_youlove": "Temui jenis lawatan yang anda suka",
+  "travel_around_world": "Melancong merata dunia",
+  "discover_more_tour": "Temui lebih banyak lawatan",
+  "the_place_discovery": "Tempat-tempat sangat berharga untuk ditemui",
+  "dosmestic_destination": "Destinasi domestik",
+  "international_destination": "Destinasi antarabangsa",
+  "watch_the_most": "Tonton video paling hidup tentang tempat yang anda ingin lawati",
+  "lastest_tour": "Tarikh lawatan terkini",
+  "hour": "Jam",
+  "ticket_option": "Pilihan tiket",
+  "see_detail": "Lihat butiran",
+  "easy_refund": "Pengembalian wang mudah",
+  "easy_reschedule": "Penjadualan semula mudah",
+  "select_ticket": "Pilih tiket",
+  "trip_highlight": "Tumpuan perjalanan",
+  "tour_schedule": "Jadual lawatan",
+  "find_tour": "Cari lawatan",
+  "best_price_from": "Harga terbaik dari",
+  "room_information": "Maklumat Bilik",
+  "little_convenient": "Kurang Selesa",
+  "price_detail": "Perincian Harga",
+  "room_rate": "Kadar Bilik",
+  "taxes_and_fees": "Cukai dan Yuran",
+  "total": "Jumlah",
+  "request_to_book": "Permintaan untuk MENYEWA",
+  "room_detail": "Perincian Bilik",
+  "book": "BUKU",
+  "contact_detail": "Butiran Hubungan",
+  "choose_time": "Pilih Masa",
+  "use_coupon": "Guna Kupon",
+  "adult": "Dewasa",
+  "children": "Kanak-kanak",
+  "add_number_guest": "Tambah bilangan tetamu",
+  "adult_year_old": "Dewasa (12-60 tahun)",
+  "children_year_old": "Kanak-kanak (4-11 tahun)",
+  "things_need_to_know": "Perkara yang perlu anda tahu",
+  "inexperienced": "Tidak berpengalaman",
+  "inseparable": "Tidak dapat dipisahkan",
+  "no_reservation": "Tiada tempahan",
+  "include_addition": "Termasuk caj tambahan",
+  "price_include": "Harga termasuk",
+  "carriage": "Kereta",
+  "round_trip": "Perjalanan pulang-pergi",
+  "high_speed": "Kereta api laju",
+  "tour_guide": "Pemandu pelancong",
+  "thai_english": "Pemandu pelancong yang bertutur dalam Bahasa Thai - Inggeris",
+  "meal": "Makanan",
+  "light_breakfast": "Sarapan ringan",
+  "lunch_option": "Pilihan makan tengah hari (pilihan vegetarian disediakan)",
+  "service_supple": "Perkhidmatan/Tambahan",
+  "divine_mask": "Topeng penyelaman dan jaket keselamatan",
+  "admission_fee": "Bayaran masuk",
+  "insurance_provide": "Insurans disediakan oleh pengendali",
+  "soft_drink": "Minuman ringan",
+  "seasonal_fruits": "Buah-buahan musim",
+  "cake_and_snack": "Harga kek dan snek tidak termasuk",
+  "other_personal": "Perbelanjaan peribadi lain",
+  "tip": "Tip",
+  "voucher_validity": "Kesahan baucar",
+  "use_selected_date": "Guna pada tarikh yang dipilih",
+  "valid_normally": "Sah pada hari biasa",
+  "valid_holiday": "Sah pada setiap cuti",
+  "conversion_method": "Kaedah penukaran",
+  "do_not_need_book": "Anda tidak perlu membuat tempahan sebelum tiba",
+  "input_directly": "Input terus",
+  "after_confirming": "Selepas mengesahkan tempahan, anda boleh melihat baucar perkhidmatan di laman tempahan saya atau melalui emel",
+  "when_coming": "Apabila tiba, serahkan sahaja perkhidmatan di telefon kepada kakitangan di pintu masuk",
+  "no_need_print_card": "Tidak perlu mencetak kad pembayaran",
+  "just_present_electronic": "Cukup tunjukkan tiket/ kad pembayaran elektronik pada telefon apabila ditukar atau masuk pintu. Sila atur kecerahan skrin yang sesuai.",
+  "how_to_change": "Bagaimana untuk menukar undian",
+  "present_voucher": "Hadiahkan baucer di telefon anda atau cetak, bersama dengan pasport/KP untuk pertukaran hadiah bagi operator pelancongan.",
+  "you_must": "Anda mesti bersedia untuk mengambil bahagian dalam lawatan dan tempat berkumpul telah dijadualkan. Jika anda tidak hadir pada masa dan tempat pertemuan, anda akan ditinggalkan dan tempahan anda akan dianggap tidak sah. Anda boleh meminta jadual berdasarkan kelulusan pengendali pelancongan dan ruang pada hari yang anda pilih.",
+  "please_note": " Sila ambil perhatian bahawa hanya kad pembayaran Traveloka anda yang sah untuk masuk. Resit pembayaran atau bukti pembayaran tidak boleh digunakan untuk masuk.",
+  "conversion": "Penukaran",
+  "refund_and_change": "Pemulangan dan perubahan kalendar",
+  "can_change_calendar": "Boleh menukar kalendar di halaman tempahan saya sebelum tarikh kedatangan yang dipilih.",
+  "can_be_fully": "Boleh dipulangkan sepenuhnya",
+  "it_is_only": "Hanya boleh meminta proses pemulangan sebelum tarikh pemilihan. Sila lihat dasar pemulangan di bawah untuk maklumat lanjut.",
+  "calendar_change": "Dasar Perubahan Kalendar",
+  "you_can_only": "Anda hanya boleh menukar jadual tempahan anda sehingga 2 kali.",
+  "require_of_schedule": "Keperluan jadual boleh dilakukan sehingga 1 hari sebelum tarikh lawatan yang dipilih.",
+  "your_rearrangement": "Jadual penataan semula anda akan digunakan untuk semua tetamu dalam 1 kod tempahan.",
+  "you_can_schedule": "Anda boleh menjadualkan tempahan anda pada mana-mana hari yang tersedia dalam tempoh dari tarikh penerbitan baucer sehingga selepas 14 hari dari tarikh melihat asal anda. Sila ambil perhatian bahawa anda hanya boleh menukar kalendar ke hari yang lain daripada harga yang sama atau lebih rendah daripada tempahan asal anda.",
+  "the_scheduling": "Tempahan jadual tidak akan dipulangkan.",
+  "refund_policy": "Dasar pemulangan",
+  "requirement_for_refund": "Keperluan untuk 2 hari terakhir sebelum pilihan anda untuk menerima pulangan 100%.",
+  "your_reservation": "Tempahan anda tidak akan dipulangkan jika anda meminta pulangan kurang dari 2 hari sebelum tarikh yang dipilih.",
+  "the_final_refund": "Pulangan terakhir tidak akan termasuk yuran perkhidmatan, kupon dan/atau yuran pindahan bank tunggal.",
+  "to_cancel_reservation": "Untuk membatalkan tempahan anda dan meminta pulangan, sila lawati butiran tempahan saya. Di bahagian pengurusan tempahan, sentuh pulangan dan ikuti proses pulangan (tersedia pada aplikasi Traveloka versi 3.18 atau lebih tinggi atau laman web Traveloka di komputer).",
+  "term_condition": "Terma & syarat",
+  "there_is_surcharge": " Terdapat caj tambahan sebanyak THB 1000 untuk lawatan yang beroperasi semasa tempoh Tahun Baru dan tempoh Songkran. Sila bayar yuran tambahan secara langsung kepada operator pelancongan.",
+  "all_travelers": "Semua pelancong mesti membawa pengenalan (atau pasport) bersama mereka setiap masa.",
+  "child_ticket": "Tiket kanak-kanak terpakai untuk kanak-kanak dari 4 hingga 11 tahun atau 120cm atau kurang tinggi.",
+  "adult_ticket": "Tiket dewasa terpakai untuk orang dari 12 hingga 60 tahun atau lebih dari 120cm tinggi.",
+  "infants_under": "Bayi di bawah 1 tahun, warga tua lebih dari 60 tahun, dan haiwan peliharaan tidak dibenarkan dalam lawatan ini.",
+  "guest_with_high": "Tetamu dengan tekanan darah tinggi, penyakit jantung, kandungan, asma, dan penyakit tulang atau ortopedik tidak dibenarkan untuk mengambil bahagian dalam lawatan ini.",
+  "you_are_allergic": "Jika anda alah kepada makanan tertentu, sila beritahu operator sebelum perjalanan.",
+  "this_activity": "Aktiviti ini tidak sesuai untuk kanak-kanak di bawah 2 tahun, wanita hamil, atau orang dengan keadaan perubatan atau kecacatan.",
+  "foreigners_must": "Warganegara asing mesti memohon Visa E melalui  dan mengemukakan visa yang diluluskan kepada agensi 7 hari sebelum tarikh perjalanan.",
+  "you_plan_to": "Jika anda merancang untuk melancong semasa perayaan besar, anda harus menempah tiket sekurang-kurangnya sebulan lebih awal.",
+  "itineraries_time": "Jadual perjalanan di atas adalah anggaran dan mungkin dipinda tanpa notis untuk sesuaikan dengan pasang surut tempatan dan keadaan cuaca."
 }
