--- a/src/languages/th.json
+++ b/src/languages/th.json
@@ -249,7 +249,7 @@
   "enter_username_email": "ป้อนชื่อผู้ใช้หรืออีเมลของคุณ",
   "for_sale": "สำหรับขาย",
   "register_partner": "ลงทะเบียนพาร์ทเนอร์",
-  "become_shome_partner": "เป็นพาร์ทเนอร์ SHome",
+  "become_shome_partner": "เป็นพาร์ทเนอร์ Saveloka",
   "real_estate_type": "ประเภทอสังหาริมทรัพย์",
   "general_information": "ข้อมูลทั่วไป",
   "estate_detail": "รายละเอียดทรัพย์สิน",
@@ -257,7 +257,7 @@
   "main_currency": "สกุลเงินหลัก",
   "distance_to_city": "ระยะทางไปยังใจกลางเมือง",
   "number_of_floors": "จำนวนชั้น",
-  "property_facilities":"สิ่งอำนวยความสะดวกของทรัพย์สิน",
+  "property_facilities": "สิ่งอำนวยความสะดวกของทรัพย์สิน",
   "estate_contact": "ข้อมูลติดต่อของทรัพย์สิน",
   "rooms": "ห้อง",
   "estate_photo": "รูปภาพของทรัพย์สิน",
