--- a/src/languages/vi.json
+++ b/src/languages/vi.json
@@ -249,7 +249,7 @@
   "enter_username_email": "Nhập tên người dùng hoặc email của bạn",
   "for_sale": "Đang bán",
   "register_partner": "Đăng ký đối tác",
-  "become_shome_partner": "Trở thành đối tác SHome",
+  "become_shome_partner": "Trở thành đối tác Saveloka",
   "real_estate_type": "Loại bất động sản",
   "general_information": "Thông Tin Tổng Quan",
   "estate_detail": "Chi Tiết Bất Động Sản",
@@ -283,111 +283,111 @@
   "link_tiktok": "Liên kết TikTok",
   "name": "Tên",
   "tour_by_topic": "Tour theo chủ đề",
-"emigrate": "Di cư",
-"world": "Thế giới",
-"find_recommend_tour": "Tìm Tour Được Khuyến Nghị",
-"package_tour_aboard": "Tour Gói Nước Ngoài",
-"discover_package_family": "Khám Phá Tour Gia Đình 5D4D !!",
-"themed_tour": "Tour Theo Chủ Đề",
-"discover_tour_youlove": "Khám Phá Loại Tour Bạn Yêu Thích",
-"travel_around_world": "Du Lịch Quanh Thế Giới",
-"discover_more_tour": "Khám Phá Thêm Các Tour",
-"the_place_discovery": "Những địa điểm rất đáng khám phá",
-"dosmestic_destination": "Điểm đến Trong Nước",
-"international_destination": "Điểm đến Quốc Tế",
-"watch_the_most": "Xem các video sống động nhất về địa điểm bạn muốn du lịch",
-"lastest_tour": "Ngày tour mới nhất",
-"hour": "Giờ",
-"ticket_option": "Tùy chọn vé",
-"see_detail": "Xem chi tiết",
-"easy_refund": "Hoàn tiền dễ dàng",
-"easy_reschedule": "Đổi lịch dễ dàng",
-"select_ticket": "Chọn vé",
-"trip_highlight": "Những điểm nổi bật của chuyến đi",
-"tour_schedule": "Lịch trình tour",
-"find_tour": "Tìm tour",
-"best_price_from": "Giá tốt nhất từ",
-"room_information": "Thông tin phòng",
-"little_convenient": "Ít tiện nghi",
-"price_detail": "Chi tiết giá",
-"room_rate": "Giá phòng",
-"taxes_and_fees": "Thuế và phí",
-"total": "Tổng cộng",
-"request_to_book": "Yêu cầu ĐẶT PHÒNG",
-"room_detail": "Chi tiết phòng",
-"book": "ĐẶT",
-"contact_detail": "Chi tiết liên hệ",
-"choose_time": "Chọn thời gian",
-"use_coupon": "Sử dụng Phiếu giảm giá",
-"adult": "Người lớn",
-"children": "Trẻ em",
-"add_number_guest": "Thêm số lượng khách",
-"adult_year_old": "Người lớn (12-60 tuổi)",
-"children_year_old": "Trẻ em (4-11 tuổi)",
-"things_need_to_know": "Những điều cần biết",
-"inexperienced": "Không có kinh nghiệm",
-"inseparable": "Không thể tách rời",
-"no_reservation": "Không có đặt chỗ",
-"include_addition": "Bao gồm các khoản phụ thu thêm",
-"price_include": "Giá đã bao gồm",
-"carriage": "Xe đưa đón",
-"round_trip": "Đưa đón khứ hồi",
-"high_speed": "Tàu hỏa tốc độ cao",
-"tour_guide": "Hướng dẫn viên du lịch",
-"thai_english": "Hướng dẫn viên du lịch biết nói tiếng Thái - Anh",
-"meal": "Bữa ăn",
-"light_breakfast": "Bữa sáng nhẹ",
-"lunch_option": "Bữa trưa theo lựa chọn (có lựa chọn chay)",
-"service_supple": "Dịch vụ/phụ trội",
-"divine_mask": "Mặt nạ lặn và áo phao",
-"admission_fee": "Phí vào cửa",
-"insurance_provide": "Bảo hiểm do nhà điều hành cung cấp",
-"soft_drink": "Nước ngọt",
-"seasonal_fruits": "Trái cây theo mùa",
-"cake_and_snack": "Giá không bao gồm bánh và đồ ăn nhẹ",
-"other_personal": "Chi phí cá nhân khác",
-"tip": "Tiền boa",
-"voucher_validity": "Hiệu lực của phiếu dịch vụ",
-"use_selected_date": "Sử dụng vào ngày đã chọn",
-"valid_normally": "Hiệu lực hàng ngày",
-"valid_holiday": "Hiệu lực vào mọi ngày lễ",
-"conversion_method": "Phương pháp chuyển đổi",
-"do_not_need_book": "Bạn không cần đặt trước khi đến",
-"input_directly": "Nhập trực tiếp",
-"after_confirming": "Sau khi xác nhận đặt chỗ, bạn có thể xem phiếu dịch vụ trên trang đặt chỗ của tôi hoặc qua email",
-"when_coming": "Khi đến, chỉ cần trình diện phiếu dịch vụ trên điện thoại cho nhân viên ở cửa để hoàn tất",
-"no_need_print_card": "Không cần in thẻ thanh toán",
-"just_present_electronic": "Chỉ cần trình diện vé điện tử/thẻ thanh toán trên điện thoại khi chuyển đổi hoặc khi nhập cửa. Vui lòng điều chỉnh độ sáng màn hình phù hợp.",
-"how_to_change": "Cách thay đổi phiếu bầu",
-"present_voucher": "Trình voucher trên điện thoại hoặc in ra, cùng với hộ chiếu/thẻ căn cước của bạn để đổi quà cho nhà tổ chức tour.",
-"you_must": "Bạn phải sẵn lòng tham gia tour và tại điểm tụ tập đã được lên lịch trước. Nếu bạn không có mặt đúng giờ và địa điểm gặp gỡ, bạn sẽ bị bỏ lại và đặt chỗ của bạn sẽ bị coi là không hợp lệ. Bạn có thể yêu cầu một lịch trình dựa trên sự phê duyệt của nhà tổ chức tour và không gian trên ngày bạn đã chọn.",
-"please_note": " Vui lòng lưu ý rằng chỉ thẻ thanh toán của Traveloka của bạn mới được chấp nhận để vào cửa. Biên nhận thanh toán hoặc bằng chứng thanh toán không thể được sử dụng để vào cửa.",
-"conversion": "Chuyển đổi",
-"refund_and_change": "Hoàn tiền và thay đổi lịch",
-"can_change_calendar": "Có thể thay đổi lịch trong trang đặt chỗ của tôi trước ngày đến được chọn.",
-"can_be_fully": "Có thể được hoàn trả hoàn toàn",
-"it_is_only": " Chỉ có thể yêu cầu quá trình hoàn tiền trước ngày chọn. Xem chính sách hoàn tiền bên dưới để biết thêm thông tin.",
-"calendar_change": "Chính sách Thay đổi Lịch",
-"you_can_only": "Bạn chỉ có thể thay đổi lịch đặt phòng của mình tối đa 2 lần.",
-"require_of_schedule": "Yêu cầu lịch có thể được thực hiện trước 1 ngày trước ngày tham quan được chọn.",
-"your_rearrangement": "Lịch sắp xếp của bạn sẽ áp dụng cho tất cả khách trong 1 mã đặt chỗ.",
-"you_can_schedule": "Bạn có thể lên lịch cho đặt phòng của mình vào bất kỳ ngày nào có sẵn trong khoảng thời gian từ ngày phát hành voucher cho đến sau 14 ngày kể từ ngày đi tham quan ban đầu của bạn. Lưu ý rằng bạn chỉ có thể thay đổi lịch sang một ngày khác với giá bằng hoặc thấp hơn so với đặt phòng ban đầu của bạn.",
-"the_scheduling": "Lịch trình đặt phòng sẽ không được hoàn trả.",
-"refund_policy": "Chính sách hoàn tiền",
-"requirement_for_refund": "Yêu cầu phải trước ít nhất 2 ngày trước khi bạn chọn để nhận 100% hoàn tiền.",
-"your_reservation": "Đặt phòng của bạn sẽ không được hoàn trả nếu bạn yêu cầu hoàn tiền ít hơn 2 ngày trước ngày được chọn.",
-"the_final_refund": "Hoàn tiền cuối cùng sẽ không bao gồm phí dịch vụ, phiếu giảm giá và/hoặc phí chuyển khoản ngân hàng đơn lẻ.",
-"to_cancel_reservation": "Để hủy đặt phòng của bạn và yêu cầu hoàn tiền, vui lòng truy cập mục đặt phòng của tôi. Trong phần quản lý đặt phòng, chạm vào hoàn tiền và tuân thủ quy trình hoàn tiền (có sẵn trên ứng dụng Traveloka phiên bản 3.18 trở lên hoặc trên trang web Traveloka trên máy tính).",
-"term_condition": "Điều khoản và điều kiện",
-"there_is_surcharge": " Có một khoản phụ phí là 1000 baht cho các tour hoạt động trong thời kỳ Năm mới và dịp Songkran. Vui lòng thanh toán phí bổ sung trực tiếp cho nhà tổ chức tour.",
-"all_travelers": "Tất cả hành khách phải mang theo giấy tờ tùy thân (hoặc hộ chiếu) vào bất kỳ lúc nào.",
-"child_ticket": "Vé trẻ em áp dụng cho trẻ từ 4 đến 11 tuổi hoặc cao dưới 120cm.",
-"adult_ticket": "Vé người lớn áp dụng cho người từ 12 đến 60 tuổi hoặc cao trên 120cm.",
-"infants_under": "Trẻ sơ sinh dưới 1 tuổi, người cao tuổi trên 60 tuổi và thú cưng không được phép tham gia tour.",
-"guest_with_high": "Khách hàng có huyết áp cao, bệnh tim, thai kỳ, hen suyễn và các bệnh xương hoặc bệnh lý cơ sở không được phép tham gia tour này.",
-"you_are_allergic": "Nếu bạn dị ứng với một loại thực phẩm cụ thể nào đó, vui lòng thông báo cho nhà tổ chức trước khi đi du lịch.",
-"this_activity": "Hoạt động này không phù hợp cho trẻ em dưới 2 tuổi, phụ nữ mang thai, hoặc những người có điều kiện y tế hoặc khuyết tật.",
-"foreigners_must": "Người nước ngoài phải đăng ký Visa điện tử qua  và gửi visa được phê duyệt đến công ty 7 ngày trước ngày đi du lịch.",
-"you_plan_to": "Nếu bạn dự định đi du lịch trong một lễ hội lớn, bạn nên đặt vé ít nhất một tháng trước.",
-"itineraries_time": "Lịch trình và thời gian trên chỉ là ước tính và có thể được điều chỉnh mà không cần thông báo trước để phù hợp với thủy triều và điều kiện thời tiết địa phương."
+  "emigrate": "Di cư",
+  "world": "Thế giới",
+  "find_recommend_tour": "Tìm Tour Được Khuyến Nghị",
+  "package_tour_aboard": "Tour Gói Nước Ngoài",
+  "discover_package_family": "Khám Phá Tour Gia Đình 5D4D !!",
+  "themed_tour": "Tour Theo Chủ Đề",
+  "discover_tour_youlove": "Khám Phá Loại Tour Bạn Yêu Thích",
+  "travel_around_world": "Du Lịch Quanh Thế Giới",
+  "discover_more_tour": "Khám Phá Thêm Các Tour",
+  "the_place_discovery": "Những địa điểm rất đáng khám phá",
+  "dosmestic_destination": "Điểm đến Trong Nước",
+  "international_destination": "Điểm đến Quốc Tế",
+  "watch_the_most": "Xem các video sống động nhất về địa điểm bạn muốn du lịch",
+  "lastest_tour": "Ngày tour mới nhất",
+  "hour": "Giờ",
+  "ticket_option": "Tùy chọn vé",
+  "see_detail": "Xem chi tiết",
+  "easy_refund": "Hoàn tiền dễ dàng",
+  "easy_reschedule": "Đổi lịch dễ dàng",
+  "select_ticket": "Chọn vé",
+  "trip_highlight": "Những điểm nổi bật của chuyến đi",
+  "tour_schedule": "Lịch trình tour",
+  "find_tour": "Tìm tour",
+  "best_price_from": "Giá tốt nhất từ",
+  "room_information": "Thông tin phòng",
+  "little_convenient": "Ít tiện nghi",
+  "price_detail": "Chi tiết giá",
+  "room_rate": "Giá phòng",
+  "taxes_and_fees": "Thuế và phí",
+  "total": "Tổng cộng",
+  "request_to_book": "Yêu cầu ĐẶT PHÒNG",
+  "room_detail": "Chi tiết phòng",
+  "book": "ĐẶT",
+  "contact_detail": "Chi tiết liên hệ",
+  "choose_time": "Chọn thời gian",
+  "use_coupon": "Sử dụng Phiếu giảm giá",
+  "adult": "Người lớn",
+  "children": "Trẻ em",
+  "add_number_guest": "Thêm số lượng khách",
+  "adult_year_old": "Người lớn (12-60 tuổi)",
+  "children_year_old": "Trẻ em (4-11 tuổi)",
+  "things_need_to_know": "Những điều cần biết",
+  "inexperienced": "Không có kinh nghiệm",
+  "inseparable": "Không thể tách rời",
+  "no_reservation": "Không có đặt chỗ",
+  "include_addition": "Bao gồm các khoản phụ thu thêm",
+  "price_include": "Giá đã bao gồm",
+  "carriage": "Xe đưa đón",
+  "round_trip": "Đưa đón khứ hồi",
+  "high_speed": "Tàu hỏa tốc độ cao",
+  "tour_guide": "Hướng dẫn viên du lịch",
+  "thai_english": "Hướng dẫn viên du lịch biết nói tiếng Thái - Anh",
+  "meal": "Bữa ăn",
+  "light_breakfast": "Bữa sáng nhẹ",
+  "lunch_option": "Bữa trưa theo lựa chọn (có lựa chọn chay)",
+  "service_supple": "Dịch vụ/phụ trội",
+  "divine_mask": "Mặt nạ lặn và áo phao",
+  "admission_fee": "Phí vào cửa",
+  "insurance_provide": "Bảo hiểm do nhà điều hành cung cấp",
+  "soft_drink": "Nước ngọt",
+  "seasonal_fruits": "Trái cây theo mùa",
+  "cake_and_snack": "Giá không bao gồm bánh và đồ ăn nhẹ",
+  "other_personal": "Chi phí cá nhân khác",
+  "tip": "Tiền boa",
+  "voucher_validity": "Hiệu lực của phiếu dịch vụ",
+  "use_selected_date": "Sử dụng vào ngày đã chọn",
+  "valid_normally": "Hiệu lực hàng ngày",
+  "valid_holiday": "Hiệu lực vào mọi ngày lễ",
+  "conversion_method": "Phương pháp chuyển đổi",
+  "do_not_need_book": "Bạn không cần đặt trước khi đến",
+  "input_directly": "Nhập trực tiếp",
+  "after_confirming": "Sau khi xác nhận đặt chỗ, bạn có thể xem phiếu dịch vụ trên trang đặt chỗ của tôi hoặc qua email",
+  "when_coming": "Khi đến, chỉ cần trình diện phiếu dịch vụ trên điện thoại cho nhân viên ở cửa để hoàn tất",
+  "no_need_print_card": "Không cần in thẻ thanh toán",
+  "just_present_electronic": "Chỉ cần trình diện vé điện tử/thẻ thanh toán trên điện thoại khi chuyển đổi hoặc khi nhập cửa. Vui lòng điều chỉnh độ sáng màn hình phù hợp.",
+  "how_to_change": "Cách thay đổi phiếu bầu",
+  "present_voucher": "Trình voucher trên điện thoại hoặc in ra, cùng với hộ chiếu/thẻ căn cước của bạn để đổi quà cho nhà tổ chức tour.",
+  "you_must": "Bạn phải sẵn lòng tham gia tour và tại điểm tụ tập đã được lên lịch trước. Nếu bạn không có mặt đúng giờ và địa điểm gặp gỡ, bạn sẽ bị bỏ lại và đặt chỗ của bạn sẽ bị coi là không hợp lệ. Bạn có thể yêu cầu một lịch trình dựa trên sự phê duyệt của nhà tổ chức tour và không gian trên ngày bạn đã chọn.",
+  "please_note": " Vui lòng lưu ý rằng chỉ thẻ thanh toán của Traveloka của bạn mới được chấp nhận để vào cửa. Biên nhận thanh toán hoặc bằng chứng thanh toán không thể được sử dụng để vào cửa.",
+  "conversion": "Chuyển đổi",
+  "refund_and_change": "Hoàn tiền và thay đổi lịch",
+  "can_change_calendar": "Có thể thay đổi lịch trong trang đặt chỗ của tôi trước ngày đến được chọn.",
+  "can_be_fully": "Có thể được hoàn trả hoàn toàn",
+  "it_is_only": " Chỉ có thể yêu cầu quá trình hoàn tiền trước ngày chọn. Xem chính sách hoàn tiền bên dưới để biết thêm thông tin.",
+  "calendar_change": "Chính sách Thay đổi Lịch",
+  "you_can_only": "Bạn chỉ có thể thay đổi lịch đặt phòng của mình tối đa 2 lần.",
+  "require_of_schedule": "Yêu cầu lịch có thể được thực hiện trước 1 ngày trước ngày tham quan được chọn.",
+  "your_rearrangement": "Lịch sắp xếp của bạn sẽ áp dụng cho tất cả khách trong 1 mã đặt chỗ.",
+  "you_can_schedule": "Bạn có thể lên lịch cho đặt phòng của mình vào bất kỳ ngày nào có sẵn trong khoảng thời gian từ ngày phát hành voucher cho đến sau 14 ngày kể từ ngày đi tham quan ban đầu của bạn. Lưu ý rằng bạn chỉ có thể thay đổi lịch sang một ngày khác với giá bằng hoặc thấp hơn so với đặt phòng ban đầu của bạn.",
+  "the_scheduling": "Lịch trình đặt phòng sẽ không được hoàn trả.",
+  "refund_policy": "Chính sách hoàn tiền",
+  "requirement_for_refund": "Yêu cầu phải trước ít nhất 2 ngày trước khi bạn chọn để nhận 100% hoàn tiền.",
+  "your_reservation": "Đặt phòng của bạn sẽ không được hoàn trả nếu bạn yêu cầu hoàn tiền ít hơn 2 ngày trước ngày được chọn.",
+  "the_final_refund": "Hoàn tiền cuối cùng sẽ không bao gồm phí dịch vụ, phiếu giảm giá và/hoặc phí chuyển khoản ngân hàng đơn lẻ.",
+  "to_cancel_reservation": "Để hủy đặt phòng của bạn và yêu cầu hoàn tiền, vui lòng truy cập mục đặt phòng của tôi. Trong phần quản lý đặt phòng, chạm vào hoàn tiền và tuân thủ quy trình hoàn tiền (có sẵn trên ứng dụng Traveloka phiên bản 3.18 trở lên hoặc trên trang web Traveloka trên máy tính).",
+  "term_condition": "Điều khoản và điều kiện",
+  "there_is_surcharge": " Có một khoản phụ phí là 1000 baht cho các tour hoạt động trong thời kỳ Năm mới và dịp Songkran. Vui lòng thanh toán phí bổ sung trực tiếp cho nhà tổ chức tour.",
+  "all_travelers": "Tất cả hành khách phải mang theo giấy tờ tùy thân (hoặc hộ chiếu) vào bất kỳ lúc nào.",
+  "child_ticket": "Vé trẻ em áp dụng cho trẻ từ 4 đến 11 tuổi hoặc cao dưới 120cm.",
+  "adult_ticket": "Vé người lớn áp dụng cho người từ 12 đến 60 tuổi hoặc cao trên 120cm.",
+  "infants_under": "Trẻ sơ sinh dưới 1 tuổi, người cao tuổi trên 60 tuổi và thú cưng không được phép tham gia tour.",
+  "guest_with_high": "Khách hàng có huyết áp cao, bệnh tim, thai kỳ, hen suyễn và các bệnh xương hoặc bệnh lý cơ sở không được phép tham gia tour này.",
+  "you_are_allergic": "Nếu bạn dị ứng với một loại thực phẩm cụ thể nào đó, vui lòng thông báo cho nhà tổ chức trước khi đi du lịch.",
+  "this_activity": "Hoạt động này không phù hợp cho trẻ em dưới 2 tuổi, phụ nữ mang thai, hoặc những người có điều kiện y tế hoặc khuyết tật.",
+  "foreigners_must": "Người nước ngoài phải đăng ký Visa điện tử qua  và gửi visa được phê duyệt đến công ty 7 ngày trước ngày đi du lịch.",
+  "you_plan_to": "Nếu bạn dự định đi du lịch trong một lễ hội lớn, bạn nên đặt vé ít nhất một tháng trước.",
+  "itineraries_time": "Lịch trình và thời gian trên chỉ là ước tính và có thể được điều chỉnh mà không cần thông báo trước để phù hợp với thủy triều và điều kiện thời tiết địa phương."
 }
