--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -30,7 +30,7 @@
   "daily": "Daily",
   "monthly": "Monthly",
   "yearly": "Yearly",
-  "around_me": "Around me",
+  "around_me": "Near me",
   "studio": "Studio",
   "all": "All",
   "apartment": "Apartment",
